--- a/app/src/main/res/layout/list_item_egg.xml
+++ b/app/src/main/res/layout/list_item_egg.xml
@@ -14,8 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:src="@drawable/icon" />
+        android:layout_marginRight="10dp" />
 
     <TextView
         android:id="@+id/list_item_title"
