--- a/app/src/main/res/layout/activity_egg.xml
+++ b/app/src/main/res/layout/activity_egg.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:id="@+id/egg"
         android:orientation="vertical"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
