--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -133,7 +133,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/faq"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:clickable="true"
+                android:onClick="webSelected" />
 
             <ca.winnipegtrails.winnipegtrails.CustomTextView
                 android:layout_width="wrap_content"
@@ -141,7 +143,9 @@
                 android:text="@string/about"
                 android:layout_marginTop="5dp"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:clickable="true"
+                android:onClick="webSelected" />
 
             <ca.winnipegtrails.winnipegtrails.CustomTextView
                 android:layout_width="wrap_content"
@@ -149,7 +153,9 @@
                 android:text="@string/manual"
                 android:layout_marginTop="5dp"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:clickable="true"
+                android:onClick="webSelected" />
         </LinearLayout>
 
         <LinearLayout
@@ -164,7 +170,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/add"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:clickable="true"
+                android:onClick="webSelected" />
 
             <ca.winnipegtrails.winnipegtrails.CustomTextView
                 android:layout_width="wrap_content"
@@ -172,7 +180,9 @@
                 android:text="@string/prizes"
                 android:layout_marginTop="5dp"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:clickable="true"
+                android:onClick="webSelected" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
