--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map_view"
     android:orientation="vertical"
@@ -7,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
-    <com.mapbox.mapboxsdk.views.MapView xmlns:mapbox="http://schemas.android.com/apk/res-auto"
+    <com.mapbox.mapboxsdk.views.MapView
         android:id="@+id/map"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
