--- a/app/src/main/res/layout/info_egg.xml
+++ b/app/src/main/res/layout/info_egg.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="#eeeeee"
     android:padding="10dp" >
 
     <com.parse.ParseImageView
